<resources>
    <string name="app_name">EZeats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textBooking">訂位</string>
    <string name="textPhone">電話:</string>
    <string name="textTime">時段:</string>
    <string name="textAdult">成人:</string>
    <string name="textPeriod">時段</string>
    <string name="textDate">日期:</string>
    <string name="textChild">小孩:</string>
    <string name="textInsert">新增</string>
    <string name="textCancel">取消</string>
    <string name="textPhoneInvaild">電話號碼無效</string>
    <string name="textNotselected">未選取</string>
    <string name="textInsertFail">新增失敗</string>
    <string name="textInsertSuccess">新增成功</string>
    <string name="textBookingfail">錯誤</string>
    <string name="textBookingSuccess">訂位成功</string>
    <string name="textMassage">謝謝</string>
    <string name="textYes">確認</string>
    <string name="textNo">取消</string>
    <string name="textNoSelect">成人人數未選</string>
    <string name="textSelect">請選取</string>
    <string name="textBookingSelect">訂位選取</string>
    <string name="textMealsSelect">請選餐點t</string>

    <string-array name="textMounth">
        <item>月</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="textTimeArray">
        <item>請選取</item>
        <item>0900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
    </string-array>
    <string-array name="textAdultArray">
        <item>請選取</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="textChildArray">
        <item>請選取</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="textYear">
        <item>年</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>

    <string name="textNoNetwork">網路連線無效</string>
    <string name="textNOMenu">無餐點</string>
    <string name="textNOFood">未點選餐點</string>
    <string name="textTable">桌位:</string>
    <string name="textNoSelectBooking">未查詢到訂位</string>
    <string name="textNoSelectBookingFound">未查詢到訂位</string>
    <string name="textInputEmail">請輸入E-mail</string>
    <string name="textEmailFormateError">E-mail 格式錯誤</string>
    <string name="textInputPassword">請輸入密碼</string>
    <string name="textLoginSuccess">登入成功</string>
    <string name="textPasswordComfirmedError">輸入密碼不一致</string>
    <string name="textMale">男</string>
    <string name="textFemale">女</string>
    <string name="textInputPhone">請輸入電話</string>
    <string name="textPhoneFormateError">電話格式錯誤</string>
    <string name="textInputName">請輸入姓名</string>
    <string name="textRegisterFail">註冊失敗</string>
    <string name="textChildNoSelect">孩童人數未選</string>
    <string name="textTableNoSelect">桌位未選</string>
    <string name="textTimeNoSelect">時段未選</string>
    <string name="textBkId">訂位編號</string>
    <string name="textTableId">桌位</string>
    <string name="textTime2">時段</string>
    <string name="textDateㄉ">日期</string>
    <string name="textChild2">小孩</string>
    <string name="textAdult2">成人</string>
    <string name="textPhone2">電話</string>
    <string name="textBack">返回</string>
    <string name="textOrder">餐點訂單</string>
    <string name="noMenuDetail">請點餐</string>
    <string name="textSuccess">查詢成功</string>
    <string name="textFail">查詢失敗</string>
    <string name="textUsingSameAccount">此Email已被註冊</string>
    <string name="textRegisterSuccess">註冊成功</string>
    <string name="textLogin">會員登入</string>
    <string name="Hometext">首頁</string>
    <string name="tvTitle">導覽</string>
    <string name="btQA"><![CDATA[Q&A]]></string>
    <string name="btHow">操作導引</string>
    <string name="btGame">小遊戲</string>
    <string name="btBox">意見箱</string>
    <string name="tvIntroduce">簡介</string>
    <string name="tvQA"><![CDATA[Q&A]]></string>
    <string name="tvNumber">1</string>
    <string name="tvMainTitle">標題</string>
    <string name="tvHowTo">操作導引</string>
    <string name="tvContact">聯絡我們</string>
    <string name="btSent">傳送</string>
    <string name="tvDots">連連看</string>
    <string name="btPlay">進入遊戲</string>
    <string name="tvUserName">名字</string>
    <string name="btCode">我的優惠碼</string>
    <string name="tvTimer" translatable="false">PlaceHolder</string>
    <string name="navFront">mainGraph</string>
    <string name="etPurpose">輸入用餐目的</string>
    <string name="etSource">請輸入得知來源</string>
    <string name="etContent">輸入字數限制200內</string>
    <string name="tvheadline">意見</string>
    <string name="btDatePicker" translatable="false">請選擇用餐日期</string>
    <string name="tvShowDate">選擇的時間</string>
    <string name="tvRating">喜歡EZeat嗎？</string>
    <string name="textBoxSuccess">已傳送</string>
    <string name="textMessage">感謝您的寶貴意見，我們將儘速回覆。</string>
    <string name="textConfirm">確定</string>
    <string name="textDisconnected">未連接網路</string>
    <string name="textNoFail">新增失敗</string>
    <string name="textMessageFound">您的留言數為0</string>
    <string name="btLeave">我要留言</string>
    <string name="btCheck">查看留言</string>
    <string name="textBox">意見箱</string>
    <string name="textForget">忘記密碼</string>
    <string name="textLianliankan">連連看</string>
    <string name="textSelectBooking">訂位查詢</string>
    <string name="textMenuDetail">餐點明細</string>
    <string name="textBookingDetail">訂位明細</string>
    <string name="textSelecttitle">查詢</string>
    <string name="textcommonproblem">操作導覽</string>
    <string name="textcommon">操作導引</string>
    <string name="textconnection">聯絡我們</string>
    <string name="textMenu">點餐</string>
    <string name="textqa"><![CDATA[Q&A]]></string>
    <string name="textRegister">註冊</string>
    <string name="textSelectOrder">訂單查詢</string>
    <string name="textNoOrder">沒有訂單</string>
    <string name="tvIsReply">回覆狀態</string>
    <string name="tvReplyContent">回覆</string>
    <string name="tvNo">No.</string>
    <string name="textSeclectMenuDetail">餐點明細</string>
    <string name="textBill">結帳</string>
    <string name="textNoName">請輸入名字</string>
    <string name="textNoNumber">請輸入正確卡號</string>
    <string name="textNoLast">請輸入正確數字</string>
    <string name="textMonthDay">請選擇日期</string>
    <string name="textNoBill">結帳失敗</string>
    <string name="textBillOK">付費成功</string>
    <string name="textdisok">優惠碼輸入成功</string>
    <string name="textdiserror">優惠碼輸入錯誤</string>
    <string name="textDataWrong">資料錯誤</string>
    <string name="textUpdatePassword">請輸入修改密碼</string>
    <string name="textPasswordAgain">再輸入一次密碼</string>
    <string name="textPasswordFail">密碼不正確</string>
    <string name="textPasswordComplete">密碼修改完成</string>
    <string name="textMember">會員專區</string>
    <string name="textMemberModify">會員資料修改</string>
    <string name="textSignOut">登出</string>
    <string name="textMemberDataUpdate">會員資料修改</string>
    <string name="textAccount">帳號:</string>
    <string name="textPassword">密碼:</string>
    <string name="textName">姓名:</string>
    <string name="textMemberId">會員編號:</string>
    <string name="textOk">確認</string>
    <string name="textPasswordIsInvalid">密碼無效</string>
    <string name="textUpdate">修改會員資料</string>
    <string name="textMemberSuccess">資料修改成功</string>
    <string name="textDeleteFail">刪除失敗</string>
    <string name="textDeleteSuccess">刪除成功</string>
    <string name="textNoArrival">餐點尚未送達完畢</string>
    <string name="textsave">優惠碼儲存</string>
    <string name="textUpdateFail">更新失敗</string>
    <string name="textUpdateSuccess">更新成功</string>
    <string name="textForgetPassword">忘記密碼</string>
    <string name="textOrderDetail">點餐明細</string>
    <string name="textLeaveAMassage">我要留言</string>
    <string name="textViewMassage">查看留言</string>
    <string name="textMessageBoard">留言板</string>
    <string name="textMassageBoard">留言板</string>
    <string name="textServerFail">請稍後再試</string>
    <string name="textWelcomeToEZeate">歡迎你立即訂位喔！</string>
    <string name="textNewBooking">請先訂位</string>
    <string name="textNoRegistered">請先註冊</string>


</resources>
