<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerview_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ezeats.main.LinkFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btQA"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:textColor="@color/colortext"
                android:background="@color/colortitle"
                android:text="@string/btQA" />

            <Button
                android:id="@+id/btHowTo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/colortext"
                android:background="@color/colortitle"
                android:text="@string/btHow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btGame"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:textColor="@color/colortext"
                android:background="@color/colortitle"
                android:text="@string/btGame" />

            <Button
                android:id="@+id/btBox"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/colortext"
                android:background="@color/colortitle"
                android:text="@string/btBox" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>