<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/howto_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

            <TextView
                android:id="@+id/tvNumber"
                android:layout_width="28dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/tvNumber"
                android:textColor="@color/colorSecondary"
                app:layout_constraintStart_toEndOf="@+id/tvNo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorText"
                android:text="@string/tvMainTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNumber"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ExpandedLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

                <LinearLayout
                    android:id="@+id/DetailLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorBackground"
                        android:padding="12dp"
                        android:text="@string/tvheadline"
                        android:textColor="@color/colorText"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/reMessageLinearlayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvIsReply"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="@string/tvIsReply"
                            android:textColor="@color/colorSecondary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvReplyContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="@string/tvReplyContent"
                            android:textColor="@color/colorSecondary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="29dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/tvNo"
                android:textColor="@color/colorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>